tests/error/error.gw
// [contains] right-side operand is not mutable
Gain a @=> dac;
